# automation-innovation-mvp

./: .env.example  .gitignore  README.md  app.js  index.html  styles.css
.github/workflows/: ci.yml
checklists/: submission-mapping.md
docs/: architecture.md
services/python-automation/: pyproject.toml
services/python-automation/app/: main.py
services/python-automation/tests/: test_health.py  test_main.py
services/ts-orchestrator/: package.json  tsconfig.json
services/ts-orchestrator/src/: index.test.ts  index.ts
services/ts-orchestrator/tests/: health.test.ts
