[project]
name = "automation-python-planner"
version = "0.1.0"
description = "Planner API for Automation Innovation MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
